--- a/gradle-use-zip/build.gradle
+++ b/gradle-use-zip/build.gradle
@@ -18,15 +18,9 @@ dependencies {
   zipScript 'my.test.zip:gradle-dist-zip:0.0.1-SNAPSHOT@zip'
 }
 
-task copyZip(type: Copy) {
-    from configurations.zipScript
-    into "$buildDir/zipScript"
-}
-
 task unzip(type: Copy) {
-  fileTree("$buildDir/zipScript").each {
-    println "unzip: file=$it"
-    from(zipTree("$it"))
+  configurations.zipScript.asFileTree.each {
+    from(zipTree(it))
   }
   into "$buildDir/unzip"
 }
